# omakase-eval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: pool.dev.json  pool.openrouter.example.json  pool.prod.example.json  round.dev.json  round.gate.example.json
data/: knowledge.pool.jsonl
oc_eval/: __init__.py  baselines.py  cli.py  engine.py  frontier.py  mockpool.py  routers.py  score.py  showcase.py  stats.py  suites.py  templates.py  transcripts.py  workers.py
omakase_eval/: __init__.py  actions.py  baselines.py  cli.py  datasets.py  engine.py  frontier.py  mockpool.py  rounds.py  routers.py  sandbox.py  sandbox_child.py  score.py  showcase.py  suites.py  templates.py  workers.py
runs/: benchmarks.json  showcase.dev.json
scripts/: fetch_knowledge.py
tests/: conftest.py  test_datasets.py  test_e2e.py  test_engine.py  test_frontier.py  test_rounds.py  test_routers.py  test_sandbox.py  test_stats.py  test_suites.py  test_transcripts.py
